# Validata

./: LICENSE  README.md  build_package.txt  pyproject.toml  requirements.txt  validata_report.csv
