[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Validata"
version = "0.1.1"
description = "A simple data quality checking package"
authors = [
    { name = "Ankita Singh" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
